Umrechnungen: Style and HTML fixed

--- a/Main/Umrechnen/index.html
+++ b/Main/Umrechnen/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
 </head>
 <body>
     <header>
@@ -17,16 +16,21 @@
 
     <main>
         <div id="UpperPart">
-            <div id="Buttons_EH">
-                <button id="Läng-M">Längenmaße</button><br><br>
-                <button id="Fläch-M">Flächenmaße</button><br><br>
-                <button id="Vol-M">Volumenmaße</button><br><br>
-                <button id="Mass-M">Massenmaße</button><br><br>
-
+            <div id="Buttons_EH", class="Buttons_AW">
+                <a href=""><button id="Läng-M", class="button">Längenmaße</button></a>
+                <a href=""><button id="Fläch-M", class="button">Flächenmaße</button></a>
+                <a href=""><button id="Vol-M", class="button">Volumenmaße</button></a>
+                <a href=""><button id="Mass-M", class="button">Massenmaße</button></a>
             </div>
         </div>
     </main>
     
+    <footer>
+        <div id="LowerPart">
+            <div id="Copyright">
+                <p>© 2025 - Mathe-Website</p>
+            </div>
+        </div>
 </body>
 </html>
 
