HTML-Verlinkung: finish

--- a/Main/Umrechnen/Laengenmaße/index.html
+++ b/Main/Umrechnen/Laengenmaße/index.html
@@ -67,5 +67,11 @@
             </div>
         </div>
     </main>
+    
+    <footer>
+        <p>
+            &copy; 2025 Mathe Webseite. Alle Rechte vorbehalten.
+        </p>
+    </footer>
 </body>
 </html>
