--- a/Main/Umrechnen/index.html
+++ b/Main/Umrechnen/index.html
@@ -17,10 +17,10 @@
     <main>
         <div id="UpperPart">
             <div id="Buttons_EH", class="Buttons_AW">
-                <a href=""><button id="Läng-M", class="button">Längenmaße</button></a>
-                <a href=""><button id="Fläch-M", class="button">Flächenmaße</button></a>
-                <a href=""><button id="Vol-M", class="button">Volumenmaße</button></a>
-                <a href=""><button id="Mass-M", class="button">Massenmaße</button></a>
+                <a href="Laengenmaße/index.html"><button id="Läng-M", class="button">Längenmaße</button></a>
+                <a href="Flaechenmaße/index.html"><button id="Fläch-M", class="button">Flächenmaße</button></a>
+                <a href="Volumenmaße/index.html"><button id="Vol-M", class="button">Volumenmaße</button></a>
+                <a href="Massenmaße/index.html"><button id="Mass-M", class="button">Massenmaße</button></a>
             </div>
         </div>
     </main>
