LaeMaße: Label fixed

--- a/Main/Umrechnen/Laengenmaße/index.html
+++ b/Main/Umrechnen/Laengenmaße/index.html
@@ -47,7 +47,7 @@
             </div>
             <div id="MeterLowerPart">
                 <div id="MeterInput">
-                    <label for="MeterInputNUM">Millimeter:</label>
+                    <label for="MeterInputNUM">Ursprungswert:</label>
                     <input type="number" id="MeterInputNUM" placeholder="z.B 100">
                 </div>
                 <br>
@@ -60,7 +60,7 @@
                 -->
 
                 <div id="MeterOutput">
-                    <label for="MeterOutputNUM">Millimeter:</label>
+                    <label for="MeterOutputNUM">Ergebnis:</label>
                     <input id="MeterOutputNUM" placeholder="Output" readonly>
                 </div>
                 <br><br>
