--- a/Main/Kreisflaeche/index.html
+++ b/Main/Kreisflaeche/index.html
@@ -6,6 +6,7 @@
     <title>Kreisflächenberechnung</title>
     <script src = script.js></script>
     <link rel="stylesheet" href="style.css">
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="fbfa3852-e6dd-4a38-858a-f8c98a3780f4"></script>
 </head>
 <body>
     <header>
