--- a/Main/TGR_Rechner/index.html
+++ b/Main/TGR_Rechner/index.html
@@ -8,6 +8,7 @@
         <title>Trinkgeld- und Aufteilungsrechner</title>
         <link rel="stylesheet" href="style.css">
         <script src="script.js"></script>
+        <script defer src="https://cloud.umami.is/script.js" data-website-id="fbfa3852-e6dd-4a38-858a-f8c98a3780f4"></script>
     </head>
     <body>
         <header>
