--- a/Main/Umrechnen/Massenmaße/index.html
+++ b/Main/Umrechnen/Massenmaße/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Massenmaße</title>
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="fbfa3852-e6dd-4a38-858a-f8c98a3780f4"></script>
 </head>
 <body>
     <header>
