--- a/Main/TGR_Rechner/index.html
+++ b/Main/TGR_Rechner/index.html
@@ -1,7 +1,7 @@
 <!-- Code made in Europe by Julian Clement: pieti30tv@gmail.com, Tel: +39 347 3327055 -->
 <!-- Julian Hackt-->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
