--- a/Main/Umrechnen/Massenmaße/index.html
+++ b/Main/Umrechnen/Massenmaße/index.html
@@ -1,17 +1,79 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Massenmaße</title>
+    <title>Volumenmaße</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
     <script defer src="https://cloud.umami.is/script.js" data-website-id="fbfa3852-e6dd-4a38-858a-f8c98a3780f4"></script>
 </head>
 <body>
     <header>
         <div id="Begrüssung">
-            <h1 id="BegrüssungH1">Massenmaße</h1>
-            <hr>
+            <h1 id="BegrüssungH1">Volumenmaße</h1>
         </div>
     </header>
+
+    <main>
+        <div id="Meter">
+                <div id="MeterUpperPart">
+                    <div id="MetrischesSystem">
+                        <h3 id="MetrischesSystemH1">Metrisches System:</h3>
+                </div>
+            </div>
+            <div id="MeterMiddlePart">
+                <div id="MeterSelectUSPEH">
+                    <label for="USPEH">Ursprungseinheit:</label>
+                    <select name="Ursprungseinheit" id="USPEH">
+                        <option value="mm">Millimeter-3</option>
+                        <option value="cm">Zentimeter-3</option>
+                        <option value="dm">Dezimeter-3</option>
+                        <option value="m">Meter-3</option>
+                        <option value="km">Kilometer-3</option>
+                    </select>
+                </div>
+                <br>
+                <div id="MeterSelectZielEH">
+                    <label for="ZielEH">Zieleinheit:</label>
+                    <select name="Zieleinheit" id="ZielEH">
+                        <option value="mm">Millimeter-3</option>
+                        <option value="cm">Zentimeter-3</option>
+                        <option value="dm">Dezimeter-3</option>
+                        <option value="m">Meter-3</option>
+                        <option value="km">Kilometer-3</option>
+                    </select>
+                </div>
+                <br><br> 
+            </div>
+            <div id="MeterLowerPart">
+                <div id="MeterInput">
+                    <label for="MeterInputNUM">Ursprungswert:</label>
+                    <input type="number" id="MeterInputNUM" placeholder="z.B 100">
+                </div>
+                <br>
+
+                <!-- 
+                <div id="MeterSubmit">
+                    <button id="MeterSubmitBTN">Submit</button>
+                </div>
+                <br> 
+                -->
+
+                <div id="MeterOutput">
+                    <label for="MeterOutputNUM">Ergebnis:</label>
+                    <input id="MeterOutputNUM" placeholder="Output" readonly>
+                </div>
+                <br><br>
+            </div>
+        </div>
+    </main>
+    
+    <footer>
+        <p>
+            &copy; 2025 Mathe Webseite. Alle Rechte vorbehalten.
+        </p>
+    </footer>
 </body>
 </html>
+
