GLCH: added Link to Main

--- a/Main/index.html
+++ b/Main/index.html
@@ -18,6 +18,7 @@
         <div class="Buttons_AW">
             <a href="TGR_Rechner/index.html"><button id ="TGR Rechner", class="button">TGR Rechner</button></a>
             <a href="Kreisflaeche/index.html"><button id="Kreisfläche", class="button">Kreisflächen-Berechnung</button></a>
+            <a href="Gleichungsrechner/index.html"><button id="GLCH Rechner", class="button">Gleichungsrechner</button></a>
             <a href="Umrechnen/index.html"><button id="Umrechnen", class="button">Maßeinheiten-Umrechnung</button></a>
         </div>
     </main>
