--- a/Main/Kreisflaeche/index.html
+++ b/Main/Kreisflaeche/index.html
@@ -38,7 +38,9 @@
     </main>
 
     <footer>
-        &copy; 2025 Mathe Webseite. Alle Rechte vorbehalten.
+        <p>&copy; 2025 Mathe Webseite. Alle Rechte vorbehalten.</p>
+        <p>Made with love by <a href="mailto:pieti30tv@gmail.com">Julian Clement</a></p>
+        <p>Pieti30 on GitHub: <a href="https://github.com/pieti30tv">Pieti30</a></p>
     </footer>
     
     <script src = script.js></script>
