--- a/Main/TGR_Rechner/index.html
+++ b/Main/TGR_Rechner/index.html
@@ -81,6 +81,11 @@
                         <option value="2">Abrunden</option>
                     </select><br>
                 </div>
+                <div id="Ending">
+                    <p>&copy; 2025 Mathe Webseite. Alle Rechte vorbehalten.</p>
+                    <p>Made with love by <a href="mailto:pieti30tv@gmail.com">Julian Clement</a></p>
+                    <p>Pieti30 on GitHub: <a href="https://github.com/pieti30tv">Pieti30</a></p>
+                </div>
             </div>        
         </footer>
     </body>
