--- a/Main/Umrechnen/Massenmaße/index.html
+++ b/Main/Umrechnen/Massenmaße/index.html
@@ -70,9 +70,9 @@
     </main>
     
     <footer>
-        <p>
-            &copy; 2025 Mathe Webseite. Alle Rechte vorbehalten.
-        </p>
+        <p>&copy; 2025 Mathe Webseite. Alle Rechte vorbehalten.</p>
+        <p>Made with love by <a href="mailto:pieti30tv@gmail.com">Julian Clement</a></p>
+        <p>Pieti30 on GitHub: <a href="https://github.com/pieti30tv">Pieti30</a></p>
     </footer>
 </body>
 </html>
