--- a/Main/Umrechnen/index.html
+++ b/Main/Umrechnen/index.html
@@ -29,7 +29,9 @@
     <footer>
         <div id="LowerPart">
             <div id="Copyright">
-                <p>© 2025 - Mathe-Website</p>
+                <p>&copy; 2025 Mathe Webseite. Alle Rechte vorbehalten.</p>
+                <p>Made with love by <a href="mailto:pieti30tv@gmail.com">Julian Clement</a></p>
+                <p>Pieti30 on GitHub: <a href="https://github.com/pieti30tv">Pieti30</a></p>
             </div>
         </div>
 </body>
