--- a/Main/Dreisatzrechner/index.html
+++ b/Main/Dreisatzrechner/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,13 +11,15 @@
 <body>
     <header>
         <div id="Begrüssung">
-            <h1 id="BegrüssungH1">Gleichungsrechner</h1>
-            <h3 id="BegrüssungP">Hier kannst du Gleichungen lösen</h3>
+            <h1 id="BegrüssungH1">Proportionalitätsrechner</h1>
+            <hr>
+            <h3 id="BegrüssungP">Hier kannst du Proportionalitäten lösen</h3>
+            <br>
         </div>
     </header>
 
     <main>
-
+        
     </main>
 
     <footer>
