DSR: Rename fixed

--- a/Main/Dreisatzrechner/index.html
+++ b/Main/Dreisatzrechner/index.html
@@ -13,7 +13,7 @@
         <div id="Begrüssung">
             <h1 id="BegrüssungH1">Proportionalitätsrechner</h1>
             <hr>
-            <h3 id="BegrüssungP">Hier kannst du Proportionalitäten lösen</h3>
+            <h3 id="BegrüssungP">Hier kannst du Proportionalitäten (Dreisätze) lösen</h3>
             <br>
         </div>
     </header>
