Work on DSR HTML

--- a/Main/Dreisatzrechner/index.html
+++ b/Main/Dreisatzrechner/index.html
@@ -19,7 +19,11 @@
     </header>
 
     <main>
-        
+        <section id="UpperPart">
+            <div id="calculator">
+                
+            </div>
+        </section>
     </main>
 
     <footer>
