KFB: Fixed error (Final)

--- a/Main/Kreisflaeche/index.html
+++ b/Main/Kreisflaeche/index.html
@@ -20,7 +20,7 @@
         <div id="Upper part">
             <br><br>
             <label for="D-Input">Durchmesser: </label>
-            <input id = "D-Input"><br><br><br>
+            <input id = "D-Input", type="number"><br><br><br>
         </div>
         <div id="SubmitBTN">
             <button type="button" id="Submit">Submit</button><br><br>
