--- a/Main/Kreisflaeche/index.html
+++ b/Main/Kreisflaeche/index.html
@@ -27,8 +27,9 @@
         </div>
         <div id="Lower-Part">
             <div id="Output">
-                <p>Die Fläche beträgt:</p>
-                <input id = "D-Output" readonly></input><br>
+                <label>Fläche:</label>
+                <input id = "D-Output" readonly></input>
+                <label for="D-Output">= Radius x Radius x PI</label>
             </div>
             <div id="Error_Output">
                 <p id="Error-OUT"></p>
